# third_party_libtiff

./: BUILD.gn  CMakeLists.txt  OAT.xml  README.OpenSource  README.md  README_en.md  README_zh.md  autogen.sh  bundle.json  install.sh
cmake/: DeflateCodec.cmake  JBIGCodec.cmake  LERCCodec.cmake  LZMACodec.cmake  WebPCodec.cmake  ZSTDCodec.cmake
config/: config.h.in
libtiff/: tif_codec.c  tif_getimage.c
patches/: patches.json
tools/: tiffcrop.c
